name:           ftphse
version:        0.4
cabal-version:  >=1.2
build-type:     Simple
author:         bahvalov

library
  hs-source-dirs:  src
  build-depends:   
                   base >= 4,
                   ftphs,
                   hslogger,
                   network,
                   stm,
                   MissingH,
                   mtl
  ghc-options:     -Wall
  other-modules:   Network.FTPE.Client
  exposed-modules: Network.FTPE.Client

