name:           ftphse
version:        0.4
cabal-version:  >=1.2
build-type:     Simple
author:         Evgeny V. Bahvalov

library
  hs-source-dirs:  src
  build-depends:   
                   base >= 4,
                   ftphs,
                   hslogger,
                   network,
                   stm,
                   MissingH,
                   mtl
  ghc-options:     -Wall
  
  exposed-modules: Network.FTPE.Client
  other-modules:   
                   Network.FTPE.Internal.FClient,
                   Network.FTPE.Internal.MClient

